# practise_agents

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pyrightconfig.json  需求清单.md
apps/backend/: .env.example  README.md  package.json  pyproject.toml
apps/backend/agents/: __init__.py  agentscope.ipynb  agentscope_agent.ipynb  announcement_writer.ipynb  autogen.ipynb  autogen_agent.ipynb  camel.ipynb  code_docs_writer.ipynb  code_review_agent.ipynb  competitive_analysis_agent.ipynb  create_agent.ipynb  customer_support_agent.ipynb  data_analysis_agent.ipynb  email_drafting_agent.ipynb  job_application_agent.ipynb  langgraph.ipynb  meeting_note_agent.ipynb  multi_agent_debate.ipynb  news-summarizer-agent.ipynb  news_summarizer_agent.ipynb  opcenter_agent.ipynb  pdf-qa-agent.ipynb  pdf_qa_agent.ipynb  planner_agent.ipynb  react_agent.ipynb  react_agent.py  recipe_agent.ipynb  reflection_agent.ipynb  research_agent.ipynb  resume_parser_agent.ipynb  risk_analysts.ipynb  search_agent.py  social_media_agent.ipynb  sql_query_agent.ipynb  stock_research_agent.ipynb  text2sql_agent.ipynb  travel_agent.py  travel_planner_agent.ipynb  uni_test_agent.ipynb
apps/backend/app/: api.py  main.py  run.py
apps/backend/app/core/: config.py
apps/backend/db/: demo.sqlite  ecommerce.sqlite
apps/backend/documents/opcenter/: DataLoom-WebSocket接口说明.md  DataLoom-接入计划清单.md  VOICE_PARSE_PROTOCOL.md  module-id-reference.md  opcenter-base-knowledge.md  voice-interaction-technical-article.md  voice-interaction-workflow.md  指令协议说明.md  语音助手实现全景梳理.md
apps/backend/llm/: __init__.py  get_llm.py
apps/backend/tests/: test_api.py
apps/frontend/: index.html  package.json
apps/frontend/src/: App.css  App.tsx  index.css
