[project]
name = "backend"
version = "0.1.0"
description = "Backend API server for My Agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langchain>=1.3.1",
    "langgraph>=1.2.1",
    "tavily>=1.1.0",
    "langchain-openai>=1.2.2",
    "serpapi>=1.0.2",
    "ipykernel>=7.2.0",
    "openai>=2.38.0",
    "autogen-agentchat>=0.7.5",
    "autogen-ext[azure,openai]>=0.7.5",
    "agentscope>=2.0.1",
    "colorama>=0.4.6",
    "camel-ai>=0.2.90",
    "langchain-tavily>=0.2.18",
    "llama-index>=0.14.23",
    "llama-index-llms-openai>=0.7.9",
    "llama-index-embeddings-openai>=0.6.0",
    "langchain-community>=0.4.2",
    "langchain-classic>=1.0.7",
    "crewai>=1.15.2",
    "pandas>=3.0.3",
    "langchain-experimental>=0.4.2",
    "tabulate>=0.10.0",
    "pypdf>=6.14.2",
    "yfinance>=1.5.1",
    "akshare>=1.18.64",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
reportAny = false

[tool.pytest.ini_options]
testpaths = ["tests"]
